SERVER-41989 Fix exception safety in `BSONObjBuilder::asTempObj`.

The setting of `_doneCalled` too early allows for it to remain set
after an exception is thrown.  This will cause invariant violations
under some conditions.